--- a/style.css
+++ b/style.css
@@ -20,13 +20,14 @@ body {
   font-size: 4px;
   padding: 0 2rem;
   color: var(--grey-300);
-  background: var(--black);
+  background: var(--white);
 }
 
 section {
   height: 100vh;
   width: 100%;
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 .article__container {
@@ -57,7 +58,7 @@ section {
   position: absolute;
 }
 .menu-btn {
-  background: var(--white);
+  background: transparent;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -65,14 +66,14 @@ section {
   height: 4rem;
   width: 4rem;
   border-radius: 50%;
-  transition: .2s;
+  transition: all .2s ease-in;
   cursor: pointer;
 }
 .menu-btn__burger {
   position: absolute;
   width: 2rem;
   height: .2rem;
-  background-color: var(--black);
+  background-color: var(--white);
   transform: translateY(-.4rem);
   transition: .2s;
 }
@@ -85,6 +86,11 @@ section {
 #menu-btn__toggle:hover ~ .menu-btn > .menu-btn__burger {
   background-color: var(--black);
 }
+
+#menu-btn__toggle:checked ~ .menu-btn {
+  background: var(--white);
+}
+
 #menu-btn__toggle:checked ~ .menu-btn > .menu-btn__burger {
   transform: rotate(45deg);
   background-color: var(--black);
@@ -123,7 +129,7 @@ section {
   top: 0;
   left: 0;
   position: fixed;
-  transition: .2s ease;
+  transition: .5s ease;
   transform: translate(100%, 0);
   z-index: -1;
 }
@@ -137,8 +143,10 @@ section {
   background-color: var(--white);
 }
 .box__container {
+  opacity: 0;
   padding: 5rem 2.5rem 2.5rem 2.5rem;
   flex: 1;
+  transition: all 1s ease-in;
 }
 .menu__box-div--top {
   width: 100%;
@@ -160,6 +168,10 @@ section {
   color: var(--black);
 }
 
+#menu-btn__toggle:checked ~ #menu > .menu__box--white > .box__container {
+  opacity: 1;
+}
+
 /*menu - light toggler */
 .menu__light-toggle--container {
   justify-content: flex-start;
@@ -174,7 +186,7 @@ section {
   display: flex;
   height: 3rem;
   width: 3rem;
-  outline: 1px solid var(--black);
+  outline: 3px solid var(--black);
   border-radius: 50px;
   cursor: pointer;
   transition: .2s;
@@ -184,7 +196,7 @@ section {
   box-sizing: border-box;
   width: 3rem;
   height: 3rem;
-  outline: 2px solid var(--black);
+  outline: 3px solid var(--black);
   border-radius: 50%;
   z-index: 1;
   transition: .2s;
@@ -212,11 +224,13 @@ section {
 /* Home */
 .section__home {
   padding: 2rem 0 2rem 0;
+  color: var(--black);
 }
 
 .home__article {
   padding: 4rem 4rem;
   flex-direction: column;
+  position: relative;
 }
 
 .home__title--container {
@@ -233,6 +247,65 @@ section {
   align-items: flex-end;
   justify-content: flex-end;
   text-align: right;
+  
+/* Portrait */
+}
+.home__portrait {
+  display: none;
+  position: absolute;
+  background: var(--white);
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 50%;
+}
+.home__portrait-box {
+  display: block;
+  position: absolute;
+  width: 2rem;
+  height: 2rem;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: .2s ease;
+}
+.home__portrait-box.open {
+  width: 20rem;
+  height: 20rem;
+  border-radius: 3rem;
+}
+
+#portrait-toggle {
+  appearance: none;
+}
+
+.portrait-box__btn {
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  transition: all .3s ease;
+  cursor: pointer;
+  background: var(--white);
+  transform: rotate(-45deg);
+}
+
+#portrait-toggle:hover ~ .portrait-box__btn {
+  transform: none;
+}
+#portrait-toggle:checked ~ .portrait-box__btn {
+  outline: 2rem solid var(--white);
+  transition: .2s ease;
+  background-image: url('img/portrait/lm-portrait.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 3rem;
+  transform: none;
 }
 
 
@@ -315,16 +388,17 @@ section {
   position: relative;
 }
 .about-2__description--top {
-  text-align: center;
+  text-align: left;
   font-size: 16rem;
-  flex: 1;
+  flex: 0 0 50%;
 }
 
 .about-2__description---bottom {
-  flex: 1;
+  flex: 0 0 50%;
 }
 
 .about-2__description--bottom-left {
+  text-align: right;
   flex: 1;
 }
 
@@ -521,6 +595,11 @@ section {
   color: var(--grey-200);
   border-bottom: 1px solid var(--grey-200);
 }
+
+.line-height--1rem {
+  line-height: 90%;
+}
+
 /* display */
 .flex {
   display: flex;
@@ -550,11 +629,11 @@ section {
   border: 1px solid var(--grey-300);
 }
 /* gaps */
-.gap--24px {
-  gap: 24px;
+.gap--2rem {
+  gap: 2rem;
 }
-.gap--12px {
-  gap: 8px;
+.gap--1rem {
+  gap: 1rem;
 }
 
 /* z-index */
