--- a/style.css
+++ b/style.css
@@ -19,7 +19,13 @@ body {
   font-family: 'Roboto', 'Verdana';
   color: var(--grey-300);
   background: var(--white);
-  margin: 0 2rem;
+  margin: 0;
+  transition: all .2s ease-in;
+}
+
+h1, h2, h3, p {
+  margin: 0;
+  padding: 0;
   transition: all .2s ease-in;
 }
 
@@ -90,6 +96,7 @@ body {
   cursor: pointer;
   background: var(--white);
 }
+
 .menu-btn__burger {
   position: absolute;
   width: 28px;
@@ -115,16 +122,6 @@ body {
 #menu-btn__toggle:checked ~ .menu-btn > .menu-btn__burger + span {
   transform: rotate(-45deg);
   height: 4px;
-}
-
-.style--about-1 {
-  background: var(--white);
-}
-.style--about-2 {
-  background: var(--grey-100);
-}
-.style--about-3 {
-  background: var(--grey-200);
 }
 
 /* menu */
@@ -194,7 +191,8 @@ body {
   position: relative;
 }
 
-#js-light-toggle__toggler {
+
+.light-toggle__toggler {
   appearance: none;
 }
 
@@ -217,22 +215,22 @@ body {
   transition: .2s;
 }
 
-#js-light-toggle__toggler:hover ~ .light-toggle__switch {
+.light-toggle__toggler:hover ~ .light-toggle__switch {
   width: 72px;
 }
 
-#js-light-toggle__toggler:checked ~ .light-toggle__switch > .light-toggle__btn {
+.light-toggle__toggler:checked ~ .light-toggle__switch > .light-toggle__btn {
   background: var(--black);
 }
 
-#js-light-toggle__toggler:hover:checked ~ .light-toggle__switch > .light-toggle__btn {
+.light-toggle__toggler:hover:checked ~ .light-toggle__switch > .light-toggle__btn {
   transform: translate(100%, 0);
 }
 
-#js-light-toggle__toggler:hover:active ~ .light-toggle__switch {
+.light-toggle__toggler:hover:active ~ .light-toggle__switch {
   height: 2.5rem;
 }
-#js-light-toggle__toggler:hover:active ~ .light-toggle__switch > .light-toggle__btn {
+.light-toggle__toggler:hover:active ~ .light-toggle__switch > .light-toggle__btn {
   height: 2.5rem;
 }
 
@@ -240,7 +238,6 @@ body {
 #home {
   height: 100vh;
   width: 100%;
-  padding: 2rem 0;
   color: var(--black);
 }
 
@@ -248,6 +245,8 @@ body {
   padding: 6rem 6rem;
   flex-direction: column;
   position: relative;
+  border-bottom-right-radius: 3rem;
+
 }
 
 .home__title--container {
@@ -312,6 +311,7 @@ body {
   height: 24px;
   cursor: pointer;
   background: var(--white);
+  border-radius: 50%;
   transition: all .1s ease-in;
   transform: rotate(-45deg);
 }
@@ -321,7 +321,7 @@ body {
   width: 80%;
   height: 80%;
   border-radius: 50%;
-  background-image: url('img/portrait/lm-portrait.png');
+  background-image: url('img/portrait/portrait.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -339,6 +339,11 @@ body {
   width: 80%;
   height: 80%;
   border-radius: 50%;
+}
+.portrait-box__btn.close {
+  transform: none;
+  width: 90%;
+  height: 90%;
 }
 
 
@@ -363,11 +368,10 @@ body {
 
 .description-box {
   display: flex;
-  padding: 3rem;
 }
 
 .description-box.I {
-  justify-content: flex-start;
+  flex-direction: row;
 }
 .description-box.II {
   align-items: center;
@@ -525,12 +529,14 @@ body {
   height: 100vh;
   width: 100%;
   color: var(--black);
-  padding: 2rem 0;
+  /* padding: 2rem 0; */
 }
 
 .contact__article {
   position: relative;
   padding: 6rem 5rem;
+  border-top-right-radius: 3rem;
+  border-top-left-radius: 3rem;
 }
 
 .contact__container--top {
@@ -564,8 +570,8 @@ body {
 }
 
 /* border */
-.border {
-  border: 1px solid black;
+.border--dashed-main {
+  border: 1px dashed var(--main);
 }
 
 .border--round {
@@ -602,9 +608,33 @@ body {
   color: var(--white);
   transition: all .2s;
   cursor: pointer;
+  position: relative;
 }
+.link::after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  content: '';
+  transform: scaleX(0);
+  background: var(--white);
+  transform-origin: bottom left;
+  transition: transform 0.25s ease-out;
+}
+.link:hover::after {
+  transform: scaleX(1);
+}
+
 .menu-link {
-  color: black;
+  color: var(--black);
+}
+.menu-link:hover {
+  color: var(--secondary);
+}
+.menu-link::after {
+  height: 5px;
+  background: var(--secondary);
 }
 .secondary-link {
   color: var(--white);
@@ -613,25 +643,15 @@ body {
   padding: 0 2rem;
 }
 
-.email-link{
-  text-decoration: underline;
-}
-
 .main-link:hover {
   color: var(--main);
 }
-.secondary-link:hover, .menu-link:hover {
-  color: var(--secondary);
+.main-link::after {
+  height: 6px;
+  background: var(--main);
 }
-
-
 
 /* headers & paragraphs*/
-h1, h2, h3, p {
-  margin: 0;
-  padding: 0;
-}
-
 .h1 {
   font-size: 14rem;
 }
@@ -643,6 +663,9 @@ h1, h2, h3, p {
 }
 
 .p1 {
+  font-size: 5rem;
+}
+.p1-pf {
   font-size: 6rem;
 }
 .p2 {
@@ -767,8 +790,35 @@ h1, h2, h3, p {
 
 
 /* MEDIA */
-/* Si es una pantalla y el tamaño es como mucho 720px */
-@media only screen and (max-width: 1080px) {
+
+
+/* Si es una pantalla y el tamaño es como mucho 1080px */
+@media only screen and (max-width: 1520px) {
+  .h1 {
+    font-size:11rem;
+  }
+  .h2 {
+    font-size: 9rem;
+  }
+  .h3 {
+    font-size: 7rem;
+  }
+  .p1 {
+    font-size: 3rem;
+  }
+  .p1-pf {
+    font-size: 3rem;
+  }
+  .p2 {
+    font-size: 3rem;
+  }
+  .p3 {
+    font-size: 2.5rem;
+  }
+}
+
+
+@media only screen and (max-width: 720px) {
   html {
     font-size: 6px;
   }
@@ -784,34 +834,38 @@ h1, h2, h3, p {
   }
 
 /*Utilites*/
-.section__number {
-  width: 4rem;
-  height: 4rem;
-  transform: translate(-20%, -20%);
-}
+  .section__number {
+    width: 4rem;
+    height: 4rem;
+    transform: translate(-20%, -20%);
+  }
 
-.h2 {
-  font-size: 10rem;
-}
-.h3 {
-  font-size: 8rem;
-}
-.p1 {
-  font-size: 4rem;
-}
-.p2 {
-  font-size: 3rem;
-}
-.p3 {
-  font-size: 2.5rem;
-}
-/* nav */
-.nav__btn--menu {
-  top: 3rem;
-  right: 5rem;
-  transition: all .2s ease-in;
-  z-index: 15;
-}
+  .h2 {
+    font-size: 10rem;
+  }
+  .h3 {
+    font-size: 8rem;
+  }
+  .p1 {
+    font-size: 4rem;
+  }
+  .p2 {
+    font-size: 4rem;
+  }
+  .p3 {
+    font-size: 2.5rem;
+  }
+  .p1-pf {
+    font-size: 5rem;
+  }
+  /* nav */
+  .nav__btn--menu {
+    top: 3rem;
+    right: 3rem;
+    transition: all .2s ease-in;
+    z-index: 15;
+  }
+
   /*menu*/
   #menu {
     flex-direction: column;
@@ -833,6 +887,10 @@ h1, h2, h3, p {
   /*home*/
   .home__article {
     padding: 3rem 4rem 8rem 3rem;
+  }
+  .home__arrow-slot {
+    bottom: 2rem;
+    right: 3rem;
   }
 
   /*about 1*/
@@ -861,28 +919,29 @@ h1, h2, h3, p {
     height: 60%;
     width: 100%;
   }
+  .description-box {
+    padding: 3rem;
+  }
 
   /* about 2 */
-.about-2__description-container {
-  flex-direction: column;
-}
-.about-2__lineart-box--top,
-.about-2__lineart-box--bottom {
-  flex-direction: column;
-}
-.about-2__lineart-box--top > .box-1 {
-  border-right: 0;
-  border-bottom: 1px dashed var(--white);
-}
-.about-2__lineart-box--top > .box-2 {
-  border-bottom: 1px dashed var(--white);
-}
-.about-2__lineart-box--bottom > .box-3 {
-  border-right: 0;
-  border-bottom: 1px dashed var(--white);
-}
-
-
+  .about-2__description-container {
+    flex-direction: column;
+  }
+  .about-2__lineart-box--top,
+  .about-2__lineart-box--bottom {
+    flex-direction: column;
+  }
+  .about-2__lineart-box--top > .box-1 {
+    border-right: 0;
+    border-bottom: 1px dashed var(--white);
+  }
+  .about-2__lineart-box--top > .box-2 {
+    border-bottom: 1px dashed var(--white);
+  }
+  .about-2__lineart-box--bottom > .box-3 {
+    border-right: 0;
+    border-bottom: 1px dashed var(--white);
+  }
 
   /* about 3 */
   .container-top__div {
@@ -890,17 +949,13 @@ h1, h2, h3, p {
     flex-direction: column;
     justify-content: flex-start;
   }
-.about-3__skill--container {
-  justify-content: center;
-}
-
+  .about-3__skill--container {
+    justify-content: center;
+  }
   .about-3__skill--container.tools {
     justify-content: center;
   }
-
-
   /* contact */
-
   .contact__container--top {
     flex-direction: column;
     justify-content: flex-start;
@@ -909,16 +964,13 @@ h1, h2, h3, p {
     flex-direction: column;
     justify-content: flex-start; 
   }
-
   .container-top__div {
     text-align: left;
   }
-
   .contact__container--center {
     flex: 1;
     justify-content: center;
     align-items: flex-start;
   }
-
 }
 
